--- a/aulas/aula003/index.html
+++ b/aulas/aula003/index.html
@@ -10,7 +10,7 @@
     <button onclick="inicio()">Clique aqui para começar</button>
     <script>
         function inicio() {
-            let nome = window.prompt('Qual é o seu nome?')
+            var nome = window.prompt('Qual é o seu nome?')
             window.alert('Olá, ${nome}! É um prazer te conhecer!')
         }
     </script>
