--- a/desafios/d001/index.html
+++ b/desafios/d001/index.html
@@ -16,7 +16,10 @@
     <button onclick="clicou1">Botão 2</button>
     <button onclick="clicou3">Botão 3</button>
     <script>
-        window.alert()
+        function clicou1() {
+            window.alert('Você clicou no primeiro botão')
+        }
+
     </script>
     
 </body>
